# juntox

./: .dockerignore  .gitignore  ADR-0001-juntoX-architecture.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.railway/: railway.ts
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  verify_backend.py
backend/app/: auth.py  db.py  init_db.py  main.py  main_router.py  models.py
backend/app/api/: ai.py
backend/app/routes/: auth.py  blog.py  contact.py  newsletter.py  projects.py
backend/app/schemas/: ai.py  blog.py  contact.py  newsletter.py  project.py  user.py
backend/app/services/: ai_service.py  user_service.py
backend/migrations/: 001_initial_schema.sql  002_newsletter_and_password_reset.sql
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  icon.tsx  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  template.tsx
frontend/app/about/: layout.tsx  page.tsx
frontend/app/ai/: layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/blog/: layout.tsx  page.tsx
frontend/app/carrieres/: layout.tsx  page.tsx
frontend/app/commerce/: layout.tsx  page.tsx
frontend/app/communication/: layout.tsx  page.tsx
frontend/components/: CommandPalette.tsx  Footer.tsx  LanguageProvider.tsx  MainNav.tsx  PageHero.tsx  ScrollToTop.tsx  SectionHeader.tsx
frontend/lib/: api.ts  auth.ts  blog-data.ts  i18n.ts  metadata.ts  pages-index.ts  site-config.ts
(+61 files in other folders)
