[project]
name = "juntox-backend"
version = "0.2.0"
description = "API FastAPI pour la plateforme JuntoX SARL"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
pydantic = {version = ">=2.9.2", extras = ["email"]}
python-dotenv = ">=1.0.1"
httpx = ">=0.27.0"
sqlalchemy = ">=2.0.51"
psycopg2-binary = ">=2.9.12"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
passlib = {version = ">=1.7.4", extras = ["bcrypt"]}
openai = ">=1.50.0"
alembic = ">=1.13.0"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
